Added test & implement create product

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,10 @@ fastapi = "*"
 uvicorn = "*"
 pytest = "*"
 requests = "*"
+asyncpg = "*"
+databases = "*"
+sqlalchemy = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
